# dQ

./: .gitignore  Dockerfile  docker-compose.yml  main.py  pyproject.toml  requirements.txt  settings.py
dQ/: handlers.py  operation.py
diannpy/: handlers.py  operation.py
dockerfiles/: Dockerfile  Dockerfile-dQng
examples/: example.ipynb
tests/: Reports.stats.tsv  test_dQ.py  test_handlers.py
uniprot/: parser.py
