[tool.poetry]
name = "dq"
version = "0.1.0"
description = ""
authors = ["Toan Phung <toan.phungkhoiquoctoan@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.0"
pandas = "^1.4.2"
tornado = "^6.1"
missingpy = "^0.2.0"
plotnine = "^0.8.0"
scikit-learn = "^1.1.1"
goatools = "^1.2.3"
pandera = "^0.11.0"
seaborn = "^0.11.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

